# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,7 @@ import healthRouter from "./health";
 import adminRouter from "./admin";
 import authRouter from "./auth";
 import settingsRouter from "./settings";
+import allergensRouter from "./allergens";
 
 const router: IRouter = Router();
 
@@ -10,5 +11,6 @@ router.use(healthRouter);
 router.use(authRouter);
 router.use(adminRouter);
 router.use(settingsRouter);
+router.use(allergensRouter);
 
 export default router;
